# Omega-AGI

./: LICENSE  README.md  build.sh  verify-lean.sh  verify.sh
datasets/l3_expert/: category_quantum_mechanics.nodes  category_quantum_mechanics.relations  non_commutative_geometry.relations
docs/: Ω-技术白皮书.md  Ω-架构设计书.md
proofs/coq/: .CCCStructure.aux  .LatticeCodeIsomorphism.aux  .SeedKernel.aux  .SelfReferenceFixedPoint.aux  .lia.cache  CCCStructure.glob  CCCStructure.v  CCCStructure.vo  LatticeCodeIsomorphism.glob  LatticeCodeIsomorphism.v  LatticeCodeIsomorphism.vo  SeedKernel.glob  SeedKernel.v  SeedKernel.vo  SelfReferenceFixedPoint.glob  SelfReferenceFixedPoint.v  SelfReferenceFixedPoint.vo
proofs/lean/: CCCStructure.lean  HigherOrderSemantics.lean  LatticeCodeIsomorphism.lean  SeedKernel.lean  SelfReferenceFixedPoint.lean  TuringCompleteness.lean  lake-manifest.json  lakefile.lean  test_syntax.lean
proofs/z3/: anchors.smt2  ccc_structure.smt2  lattice_code_isomorphism.smt2  self_reference_fixed_point.smt2
reports/: checkpoint-meta.json  formal-verification-2026-06-25.md  long-run-progress.json  long-run-v2.json  long-run.json  provenance.md  training_plan.json
scripts/: long_run_verify.sh  resume_long_run.sh  run_formal_proofs.sh
seed-kernel/: Cargo.toml
seed-kernel/include/: seed_kernel.h
seed-kernel/src/: lib.rs
zig-engine/: .lia.cache  build.zig  omega-falling-debug  run_experiments
zig-engine/src/: abs_optimizer.zig  attribute_pool.zig  audit.zig  category_structure.zig  cdl_depth_probe.zig  cdl_experiments.zig  cdl_expr.zig  creativity.zig  (+58 more)
(+23 files in other folders)
